--- a/.github/workflows/509.yml
+++ b/.github/workflows/509.yml
@@ -80,3 +80,32 @@ jobs:
         with:
           commit_message: "🔄 自动同步 Worker 版本: ${{ steps.check_update.outputs.tag_name || '未知' }}"
           commit_author: "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
+
+      - name: 删除旧的 Workflow Runs（保留最近 2 次）
+        env:
+            GH_PAT: ${{ secrets.GH_PAT }}
+            REPO: ${{ github.repository }}
+            WORKFLOW_NAME: ${{ github.workflow }}
+        run: |
+            echo "📥 查找 workflow_id（按名称匹配）..."
+            workflow_id=$(curl -s -H "Authorization: token $GH_PAT" \
+              https://api.github.com/repos/$REPO/actions/workflows | \
+              jq --arg name "$WORKFLOW_NAME" '.workflows[] | select(.name == $name) | .id')
+
+            echo "workflow_id: $workflow_id"
+            if [ -z "$workflow_id" ]; then
+              echo "❌ 无法找到 workflow_id，退出..."
+              exit 1
+            fi
+ 
+            echo "🔄 获取运行历史（保留最近 2 个）..."
+            run_ids=$(curl -s -H "Authorization: token $GH_PAT" \
+              "https://api.github.com/repos/$REPO/actions/workflows/$workflow_id/runs?per_page=100" | \
+              jq '.workflow_runs | .[2:] | .[].id')
+
+            echo "🗑️ 删除旧 Workflow Runs..."
+            for run_id in $run_ids; do
+              echo "➡ 删除 run $run_id"
+              curl -s -X DELETE -H "Authorization: token $GH_PAT" \
+                "https://api.github.com/repos/$REPO/actions/runs/$run_id"
+            done
